--- a/opdracht 1/LP/css/style.css
+++ b/opdracht 1/LP/css/style.css
@@ -133,6 +133,7 @@ body{
 
 }
 .formz{
+    border-bottom: 0.1rem solid white;
     font-size: 1.8rem;
     background-color: black;
     color: white;
@@ -149,7 +150,8 @@ form{
     font-family: sans-serif;
     width: 100%;
     min-height: 40rem;
-    background-color: white;
+    background-color: black;
+    color: white;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -159,15 +161,17 @@ form{
     gap: 2rem;
 }
 form label{
-    border: 2px solid black;
+    border: 2px solid white;
 }
 form div{
-
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
+.sectionA{
+    background: black;
 
+}
 input{
     display: block;
     width: 25ch;
@@ -205,6 +209,7 @@ textarea{
 
 
 footer{
+    border-top: 0.1rem solid white;
     height: 9rem;
     background-color: black;
     display: flex;
